feat: implement user authentication with access and refresh tokens

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 APP_PORT=8000
 DATABASE_URL="postgres://user:password@localhost:5432/url_shortening_backend"
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
