fix: update .env.example to include APP_NAME

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APP_NAME="URL Shortening Backend"
 APP_PORT=8000
 DATABASE_URL="postgres://user:password@localhost:5432/url_shortening_backend"
 ACCESS_TOKEN_SECRET=
